# stackerror

./: Cargo.toml  LICENSE  README.md
impl/: Cargo.toml
impl/src/: lib.rs
src/: codes.rs  error.rs  from_http.rs  from_reqwest.rs  from_std_io.rs  lib.rs  macros.rs  message.rs  prelude.rs  traits.rs
tests/: no_std_alloc_tests.rs  no_std_core_tests.rs
