[package]
name = "stackerror"
version = "0.4.1"
edition = "2021"
description = "A pragmatic error handling library for Rust that provides helpful strings for debugging, and structured data for runtime error handling."
readme = "README.md"
repository = "https://github.com/gmcgoldr/stackerror"
license = "MIT OR Apache-2.0"
keywords = ["error", "error-handling"]

[lib]
doctest = false

[dependencies]
stackerror-impl = { version = "=0.4.1", path = "impl" }

[workspace]
members = ["impl"]
