[package]
name = "stackerror"
version = "0.7.0"
edition = "2021"
description = "A pragmatic error handling library for Rust that provides helpful strings for debugging, and structured data for runtime error handling."
readme = "README.md"
repository = "https://github.com/gmcgoldr/stackerror"
license = "MIT OR Apache-2.0"
keywords = ["error", "error-handling"]

[lib]
doctest = false

[dependencies]
stackerror-impl = { version = "=0.7.0", path = "impl" }
reqwest = { version = "0.12", optional = true, default-features = false }
http = { version = "1", optional = true }

[workspace]
members = ["impl"]

[features]
default = []
reqwest = ["dep:reqwest", "http"]
http = ["dep:http"]
