[package]
name = "stackerror-impl"
version = "0.7.0"
edition = "2021"
description = "Derive macro implementation for the `stackerror` crate."
readme = "../README.md"
repository = "https://github.com/gmcgoldr/stackerror"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
